# jspace

./: .gitignore  README.md  pyproject.toml
jspace/: __main__.py  cache.py  corpus.py  jacobian.py  lens.py  model_adapter.py  runner.py  server.py
tests/: conftest.py  test_cache_and_lens.py  test_e2e.py  test_jacobian_math.py  test_qwen3_5_arch.py  test_runner.py  test_server.py
web/: app.js  index.html  style.css
