[project]
name = "jspace"
version = "0.1.0"
description = "Jacobian Space (J-lens) explorer — visualize what an LLM is poised to verbalize, per layer and position"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9",
    "transformers>=4.56",
    "safetensors>=0.4",
    "datasets>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "accelerate>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "playwright>=1.61.0",
    "pytest-playwright>=0.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
